--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,24 @@
 body {
   font-family: 'League Spartan', sans-serif;
 }
+
+/* Styles for the spinner */
+.logo-spinner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.logo {
+  animation: spin infinite 5s linear;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
